fix: links ajustment and navbar blurring

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,7 +81,7 @@
   --secondary: oklch(0.9703 0 0);
   --secondary-foreground: oklch(0.1405 0.0044 285.8238);
   --muted: oklch(0.9703 0 0);
-  --muted-foreground: oklch(0.7119 0.0129 286.0684);
+  --muted-foreground: oklch(0.4154 0.0129 286.0684);
   --accent: oklch(0.9703 0 0);
   --accent-foreground: oklch(0.1405 0.0044 285.8238);
   --destructive: oklch(0.6368 0.2078 25.3259);
@@ -141,7 +141,7 @@
   --secondary: oklch(0.2747 0.006 286.0011);
   --secondary-foreground: oklch(0.9848 0 0);
   --muted: oklch(0.2747 0.006 286.0011);
-  --muted-foreground: oklch(0.4154 0.0129 286.0684);
+  --muted-foreground: oklch(0.6498 0.0129 286.0684);
   --accent: oklch(0.2747 0.006 286.0011);
   --accent-foreground: oklch(0.9848 0 0);
   --destructive: oklch(0.3959 0.1331 25.7205);
